--- a/torneo/templates/torneo/registrar_cedula.html
+++ b/torneo/templates/torneo/registrar_cedula.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block main %}
-<form class="container" method="POST">
+<form class="container" method="POST" action="{% url "torneo:registrar_cedula" id_torneo id_partido %}">
   {% csrf_token %}
   <div class="row">
     <div class="col s12 m12 l12 center">
@@ -9,73 +9,84 @@
       <h5>Cédula Arbitral</h5>
     </div>
     <div class="col s12 m12 l12 center">
-      <h6>Estadio: Santiago Bernabeu</h6>
-      <h6>Jueves 5 de abril de 2018 - 18:00 hrs.</h6>
+      <h6>Estadio: {{partido.cancha}}</h6>
+      <h6>{{partido.fecha}} - {{partido.hora}}</h6>
     </div>
   </div>
   <!-- Versión de Escritorio -->
-  <div class="row hide-on-small-only">
-    <div class="col m4 l4 center">
-      <h5>Real Madrid</h5>
+  <div class="row">
+    <div class="col s12 m6 l6">
+      <div class="row">
+        <div class="col s12 m6 l8 center">
+          <h5>{{equipo_local.nombre}}</h5>
+        </div>
+        <div class="input-field col s12 m6 l4">
+          <input value="{{partido.goles_local}}" id="{{form.goles_local.id_for_label}}" name="{{form.goles_local.html_name}}" type="number" min="0" max="20">
+        </div>
+      </div>
     </div>
-    <div class="input-field col m2 l2">
-      <input value="2" id="goles_local" name="goles_local" type="number" min="0" max="20">
-    </div>
-    <div class="input-field col m2 l2">
-      <input value="2" id="goles_visitante" name="goles_visitante" type="number" min="0" max="20">
-    </div>
-    <div class="col m4 l4 center">
-      <h5>Barcelona</h5>
-    </div>
-  </div>
-  <!-- Versión Móvil -->
-  <div class="row hide-on-med-and-up">
-    <div class="col s8">
-      <h5>Real Madrid</h5>
-    </div>
-    <div class="input-field col s4">
-      <input value="2" id="goles_local" name="goles_local" type="number" min="0" max="20">
-    </div>
-    <div class="col s8">
-      <h5>Barcelona</h5>
-    </div>
-    <div class="input-field col s4">
-      <input value="2" id="goles_visitante" name="goles_visitante" type="number" min="0" max="20">
+    <div class="col s12 m6 l6">
+      <div class="row">
+        <div class="input-field col s12 m6 l4">
+          <input value="{{partido.goles_visitante}}" id="{{form.goles_visitante.id_for_label}}" name="{{form.goles_visitante.html_name}}" type="number" min="0" max="20">
+        </div>
+        <div class="col s12 m6 l8 center">
+          <h5>{{equipo_visitante.nombre}}</h5>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
-    <!-- Jugadoras Equipo Local -->
     <div class="col s12 m12 l12">
       <table class="striped">
         <thead>
           <tr>
-            <th>Real Madrid</th>
-            <th>Barcelona</th>
+            <th>{{equipo_local.nombre}}</th>
+            <th>{{equipo_visitante.nombre}}</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>
-              <label>
-                <input id="5" name="asistencia" type="checkbox">
-                <span>María Anastasia Rodríguez Alfaro</span>
-              </label>
-            </td>
-            <td>
-              <label>
-                <input id="6" name="asistencia" type="checkbox">
-                <span>María Anastasia Rodríguez Alfaro</span>
-              </label>
-            </td>
-          </tr>
+          {% for key, values in jugadoras.items %}
+            {% if forloop.counter|divisibleby:"2" == 0 %}
+              <tr>
+                {% if values.id != "nada" %}
+                  <td>
+                    <label>
+                      <input type="checkbox" jugadora="{{values.id}}" partido="{{id_partido}}" equipo="{{values.equipo}}">
+                      <span>{{values.nombre}}</span>
+                    </label>
+                  </td>
+                {% else %}
+                  <tr>
+                    <td></td>
+                {% endif %}
+            {% else %}
+              {% if values.id != "nada" %}
+                  <td>
+                    <label>
+                      <input type="checkbox" jugadora="{{values.id}}" partido="{{id_partido}}" equipo="{{values.equipo}}">
+                      <span>{{values.nombre}}</span>
+                    </label>
+                  </td>
+                </tr>
+              {% else %}
+                  <td></td>
+                </tr>
+              {% endif %}
+            {% endif %}
+          {% endfor %}
         </tbody>
       </table>
     </div>
   </div>
   <div class="row">
     <div class="input-field col s12 m12 l12">
-      <textarea id="notas" class="materialize-textarea"></textarea>
-      <label for="notas">Notas</label>
+      <textarea id="{{form.notas.id_for_label}}" name="{{form.notas.html_name}}" class="materialize-textarea">{{partido.notas}}</textarea>
+      <label for="{{form.notas.id_for_label}}">Notas</label>
+    </div>
+    <div class="input-field col s12 m12 l12 center">
+        <input placeholder="Árbitro" value="{{partido.arbitro}}" id="{{form.arbitro.id_for_label}}" name="{{form.arbitro.html_name}}" type="text" class="validate">
+        <label for="{{form.arbitro.id_for_label}}">Árbitro</label>
     </div>
   </div>
   <div class="row">
@@ -90,7 +101,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/js/materialize.min.js"></script>
 <script src=" https://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
-<script>
+<script type="text/javascript">
     $(document).ready(function(){
         var csrftoken = $.cookie('csrftoken');
         function csrfSafeMethod(method) {
@@ -105,19 +116,25 @@
             }
         });
         $('select').formSelect();
-    });
-
-    $(document).ready(function() {
-      $('input[type=checkbox]').change(function(e) {
-        var url = '{% url "torneo:registrar_asistencia" %}';
-        var id_partido = {{ id_partido }} ;
-        var id_jugadora = $(this).attr('id') ;
-        var estado = $(this).is(":checked") ;
-        var contexto = {"id_partido":id_partido, "id_jugadora":id_jugadora, "estado":estado} ;
-        $.post(url,contexto).done(function(data){
-          alert(data) ;
+        $('input[type=checkbox]').change(function(e) {
+          var url = '{% url "torneo:registrar_asistencia" %}';
+          var id_partido = $(this).attr('partido') ;
+          var id_jugadora = $(this).attr('jugadora') ;
+          var id_equipo = $(this).attr('equipo') ;
+          var estado = $(this).is(":checked") ;
+          var contexto = {"id_partido":id_partido, "id_jugadora":id_jugadora, "id_equipo":id_equipo, "estado":estado} ;
+          $.ajax({
+            type: 'POST',
+            url: url,
+            data: contexto,
+            success: function () {
+              // Por ahora no ocupamos retroalimentación de cada asistencia.
+            },
+            error: function (xhr, status, error) {
+              alert(xhr.responseText);
+            }
+         });
         });
-      });
     });
 
 </script>
