--- a/torneo/templates/torneo/lista_partidos.html
+++ b/torneo/templates/torneo/lista_partidos.html
@@ -1,4 +1,4 @@
-<h4 class="center-align">Jornada {{jornada.jornada}}</h4><h6> <a href='{% url "torneo:mandar_codigoCedula" id_jornada jornada.id %}'><i class="material-icons icon-blue">print</i>Imprimir Claves de Acceso</a></h6>
+<h4 class="center-align">Jornada {{jornada.jornada}}</h4><h6> <a href='{% url "torneo:mandar_codigoCedula" jornada.torneo.id jornada.id %}'><i class="material-icons icon-blue">print</i>Imprimir Claves de Acceso</a></h6>
 
 <br>
 {% for partido in partidos %}
